<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.noble.claire.clairecash.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.3"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="45sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText
            android:id="@+id/et_dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_dollar"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_comment"
            android:inputType="textCapSentences"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:onClick="createPayment"/>
    </LinearLayout>


    <ScrollView
        android:id="@+id/sv_payments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:id="@+id/ll_payments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="?android:dividerHorizontal"
            android:showDividers="middle">

        </LinearLayout>
    </ScrollView>
</LinearLayout>
